fix bugs with grid on mobile

--- a/wp-content/themes/rozowe-studio/src/scss/pages/_post.scss
+++ b/wp-content/themes/rozowe-studio/src/scss/pages/_post.scss
@@ -11,4 +11,9 @@
             margin: 0 auto;
         }
     }
+    @include mobile {
+        .page-description {
+            margin-bottom: 0;
+        }
+    }
 }
